// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`botChannelChoice defaults to false fallback 1`] = `
Object {
  "payload": Object {
    "fallback": false,
    "message": Object {
      "interpolation": Object {},
      "key": "world",
    },
    "timestamp": 1531267200000,
  },
  "type": "widget/answerBot/BOT_CHANNEL_CHOICE",
}
`;

exports[`botChannelChoice dispatches expected payload 1`] = `
Object {
  "payload": Object {
    "fallback": false,
    "message": Object {
      "interpolation": true,
      "key": "hello",
    },
    "timestamp": 1531267200000,
  },
  "type": "widget/answerBot/BOT_CHANNEL_CHOICE",
}
`;

exports[`botFallbackMessage when channelAvailable is false dispatches the appropriate actions 1`] = `
Array [
  Object {
    "payload": Object {
      "message": Object {
        "interpolation": Object {},
        "key": "embeddable_framework.answerBot.msg.prompt_again_after_yes",
      },
      "sessionID": 1234,
      "timestamp": 1531267200000,
    },
    "type": "widget/answerBot/BOT_MESSAGE",
  },
  Object {
    "type": "widget/answerBot/GET_IN_TOUCH_SHOWN",
  },
]
`;

exports[`botFallbackMessage when channelAvailable is true dispatches the appropriate actions 1`] = `
Array [
  Object {
    "payload": Object {
      "message": Object {
        "interpolation": Object {},
        "key": "embeddable_framework.answerBot.msg.prompt_again_no_channels_available",
      },
      "sessionID": 1234,
      "timestamp": 1531267200000,
    },
    "type": "widget/answerBot/BOT_MESSAGE",
  },
  Object {
    "payload": Object {
      "message": Object {
        "interpolation": Object {},
        "key": "embeddable_framework.answerBot.msg.initial_fallback",
      },
      "sessionID": 1234,
      "timestamp": 1531267200000,
    },
    "type": "widget/answerBot/BOT_MESSAGE",
  },
  Object {
    "type": "widget/answerBot/GET_IN_TOUCH_SHOWN",
  },
]
`;

exports[`botFeedback defaults to primary 1`] = `
Object {
  "payload": Object {
    "feedbackType": "primary",
    "timestamp": 1531267200000,
  },
  "type": "widget/answerBot/BOT_FEEDBACK",
}
`;

exports[`botFeedback dispatches expected payload 1`] = `
Object {
  "payload": Object {
    "feedbackType": "secondary",
    "timestamp": 1531267200000,
  },
  "type": "widget/answerBot/BOT_FEEDBACK",
}
`;

exports[`botFeedbackMessage dispatches expected payload 1`] = `
Object {
  "payload": Object {
    "feedbackRelated": true,
    "message": Object {
      "interpolation": Object {},
      "key": "hello",
    },
    "timestamp": 1531267200000,
  },
  "type": "widget/answerBot/BOT_MESSAGE",
}
`;

exports[`botFeedbackRequested dispatches expected payload 1`] = `
Object {
  "type": "widget/answerBot/BOT_FEEDBACK_REQUESTED",
}
`;

exports[`botGreeted dispatches expected payload 1`] = `
Object {
  "payload": true,
  "type": "widget/answerBot/BOT_GREETED",
}
`;

exports[`botInitialFallback dispatches expected payload 1`] = `
Object {
  "payload": true,
  "type": "widget/answerBot/BOT_INITIAL_FALLBACK",
}
`;

exports[`botMessage dispatches expected actions 1`] = `
Array [
  Object {
    "payload": Object {
      "message": Object {
        "interpolation": Object {},
        "key": "hello world",
      },
      "sessionID": 1234,
      "timestamp": 1531267200000,
    },
    "type": "widget/answerBot/BOT_MESSAGE",
  },
]
`;

exports[`botTyping dispatches expected payload 1`] = `
Object {
  "payload": Object {
    "timestamp": 1531267200000,
  },
  "type": "widget/answerBot/BOT_TYPING",
}
`;

exports[`botUserMessage dispatches expected payload 1`] = `
Object {
  "payload": Object {
    "feedbackRelated": true,
    "isVisitor": true,
    "message": Object {
      "interpolation": Object {},
      "key": "hello",
    },
    "timestamp": 1531267200000,
  },
  "type": "widget/answerBot/BOT_MESSAGE",
}
`;
